// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu-bar-item matches snapshot with all properties 1`] = `
<button
  aria-label="all"
  class="item-all"
  type="button"
>
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
   
  <div
    class="unread-indicator has-unreads has-mentions"
  />
</button>
`;

exports[`menu-bar-item matches snapshot with required properties 1`] = `
<button
  aria-label=""
  class="item"
  type="button"
>
  <span
    aria-hidden="true"
    class="icon-wrapper"
  />
   
  <div
    class="unread-indicator"
  />
</button>
`;
